refactor: sesuaikan fitur manajemen akun UKM dengan UI terbaru (format respon, bcrypt, schema)
